v3.5.0:
  - Prevent viewers from locking the screen focus.
v3.4.2:
  - TS movies not hiding any acquisition parameter to prevent accidental override.
v3.4.1:
  - Update HIV-tiltseries-alignment-reconstruction.json template
  - Update Picking template II
  - Update Relion4 template
v3.4:
  - Compose tilt series: Allowing tilt series with gaps
  - New protocol: "meshes from tomoMask"
  - Tomoviewer: Can sort by acquisition order too.
  - Sampling rate in Coordinates3D rounded to 2 decimal places upon visualization.
  - HIV STA template divided into 2: Dynamo STA and Relion4 STA
  - Picking template tutorial (cryolo, eman, deepfinder) changed
  Developers:
  - TestBaseCentralizedLayer: New test class to make more precise assertions on outputs.
  - Adding a method for extracting odd-even filenames
  - Fix schedule execution in protocol for importing coords from Scipion
v3.3:
  - Tomo metadata viewer increase contrast when left clicking on the preview image.
  - Import tilt series movies using a pattern instead of from mdoc files was improved and admits brackets [] in the
    basename of the files.
  - Import tilt series from mdoc now admits numeric base names or base names beginning by a numeric character
  - New config var: NAPARI_ENV_ACTIVATION, used by other plugins. Napari binary installation is centralized here.

  Developers:
  - Coordinates 3D object have a new attribute _score to store the coordinates score, when necessary.
  - SetOfSubTomograms append method now manages the align attribute of the set.

v3.2:
  - New protocol: "Landmarks to 2D coordinates". To jump to SPA from 3d info.
  - Tolerate empty lines in tlt files
  - Motion correction outputs renamed and fixed for odd/even and dose weighted
  - Tilt series can be sent to Xmipp metadata viewer for subsetting/inspection
  - TomoMetadataViewer shows the preview of the slice and some metadata (tiltAxisAngle)
  - Fix: Imod not needed for importing coordinates, unless imod mode is selected