@@ -1,5 +1,6 @@
 v3.5.0:
   - Prevent viewers from locking the screen focus.
+  - Napari 0.4.17 is the default version. boxmanager and tomotwin are now independent
 v3.4.2:
   - TS movies not hiding any acquisition parameter to prevent accidental override.
 v3.4.1:
